--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <img src="assets/profile_pic/mee....JPG" class="rounded-circle mb-3" alt="Profile Photo"
                 style="width: 200px; height: 200px;">
             <h1>Harshavardhan KM</h1>
-            <h3>Senior .NET Developer</h3>
+            <h3>Junior .NET Developer</h3>
             <p class="lead">Passionate about building robust and scalable applications</p>
         </div>
     </section>
